create the swagger of the rentals
